[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zomato_top3_recco"
version = "0.1.0"
description = "this is food recommended top 3 in home page."
readme = "README.rst"
authors = [
  {name = "Atish Sharma", email = "atish.sharma7321@gmail.com"}
]
maintainers = [
  {name = "Atish Sharma", email = "atish.sharma7321@gmail.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Atish019/zomato_top3_recco/issues"
changelog = "https://github.com/Atish019/zomato_top3_recco/blob/master/changelog.md"
homepage = "https://github.com/Atish019/zomato_top3_recco"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

